# aw-watcher-docker

./: CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yaml  release.yaml
src/: main.rs
