[package]
name = "aw-watcher-docker"
version = "0.1.1"
edition = "2024"
description = "ActivityWatch watcher for Docker container activity"
license = "MPL-2.0"

[[bin]]
name = "aw-watcher-docker"
path = "src/main.rs"

[dependencies]
aw-client-rust = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
aw-models = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
bollard = "0.21.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0.18"
futures-util = "0.3"
bollard-stubs = "=1.53.1-rc.29.3.1"
